--- a/study_0904/test06.html
+++ b/study_0904/test06.html
@@ -61,11 +61,30 @@
         </form>
 
         <hr>
-        <h3>컬러 예제</h3>
+        <h3>number, range 예제</h3>
         <form>
-            <input type="color" value="#00bfff" onchange="document.body.style.color=this.value">
+            지속시간 (0.0~10.0시간) : <input type="number" min="0.0" max="10.0" step="0.5"><br><br>
+            온도 설정 : 10&deg; <input type="range" min="10" max="30" list="temperatures"> 30&deg;
+                <datalist id="temperatures">
+                    <option value="13" label="Low">
+                    <option value="20" label="Medium">
+                    <option value="27" label="High">
+                </datalist>
         </form>
 
-        
+        <hr>
+        <h3>placeholder 예제</h3>
+        <form>
+            email : <input type="email" placeholder="id@host"><br>
+        </form>
+
+        <hr>
+        <h3></h3>예제</h3>
+        <form>
+            
+        </form>
+
+
+
     </body>
 </html>
