--- a/study_0905/test02.html
+++ b/study_0905/test02.html
@@ -1,7 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+    <style>
+        h1 {
+            font-size: 32px;
+        }
+        p {
+            color: red;
+        }
+        .list li {
+            background-color: yellowgreen;
+        }
+        #container p {
+            color: blue;
+        }
+        #container p.exception {
+            color: yellowgreen;
+        }
+        a:hover {
+            background: yellow;
+        }
+    </style>
 </head>
 <body>
   <div id="container">
@@ -13,6 +32,12 @@
       <li>Item 2</li>
       <li>Item 3</li>
     </ul>
+    <br>
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+      </ul>
    
   	
   </div>
