--- a/study_0905/test05.html
+++ b/study_0905/test05.html
@@ -23,9 +23,78 @@
     <body>
         <div class="box">
             <span>DIVDIVDIV</span>
-        </div>
+        </div><hr>
     </body>
 
+    <head>
+        <style>
+            p {
+                background: #90d000;
+                width: 300px;
+                padding: 20px;
+            }
+            #round1 { border-radius : 50px; }
+            #round2 { border-radius : 0px 20px 40px 60px; }
+            #round3 { border-radius : 0px 20px 40px; }
+            #round4 { border-radius : 0px 20px; }
+            #round5 { border-radius : 50px; border-style: dotted; }
+        </style>
+    </head>
+    <body>
+        <h3>둥근 모서리 테두리</h3>
+        <hr>
+        <p id="round1">반지름 50픽셀의 둥근 모서리</p>
+        <p id="round2">반지름 0, 20, 40, 60픽셀의 둥근 모서리</p>
+        <p id="round3">반지름 0, 20, 40픽셀의 둥근 모서리</p>
+        <p id="round4">반지름 0, 20픽셀의 둥근 모서리</p>
+        <p id="round5">반지름 50픽셀의 둥근 모서리</p>
+        <hr>
+    </body>
 
+    <head>
+        <style>
+            #box {
+                background-color: palevioletred;
+                background-size: 100px 100px;
+                background-image: url(image01.jpg);
+                background-repeat: repeat-y;
+                background-position: center center;
+            }
+            #box {
+                width: 200px;
+                height: 200px;
+                color: brown;
+                font-size: 32px;
+            }
+        </style>
+    </head>
+    <body>
+        <h3>div 박스에 배경 꾸미기</h3><hr>
+        <div id="box">여름이었다....</div>
+    </body>
 
+    <head>
+        <style>
+            #shadow {
+                font: nomal 24px verdata;
+            }
+            .redText {
+                text-shadow : 3px 3px red;
+            }
+            .blurText {
+                text-shadow: 3px 3px 5px skyblue;
+            }
+            .threeDEffect {
+                color: white;
+                text-shadow: 2px 2px 4px black;
+            }
+        </style>
+    </head>
+    <body>
+        <hr>
+        <div class="redText">Color Shadow</div>
+        <div class="blurText">Blur Shadow</div>
+        <div class="threeDEffect">3D Effect</div>
+        <hr>
+    </body>
 </html>
