--- a/study_0905/test05.html
+++ b/study_0905/test05.html
@@ -97,4 +97,30 @@
         <div class="threeDEffect">3D Effect</div>
         <hr>
     </body>
+
+    <head>
+        <style>
+            #divdisplay {
+                border : 2px solid yellowgreen;
+                color : blue;
+                background: aliceblue;
+            }
+            #spandisplay {
+                border: 3px dotted red;
+                background: yellow;
+            }
+        </style>
+    </head>
+
+    <body>
+        <h3>인라인, 인라인 블록, 블록</h3>
+        <hr>
+        나는 <div id="divdisplay" style="display: none;">div(none)</div>입니다<br><br>
+        나는 <div id="divdisplay" style="display: inline;">div(inline)</div>입니다<br><br>
+        나는 <div id="divdisplay" style="display: inline-block; height: 50px;">div(inline-block)</div>입니다<br><br>
+        나는 <div id="divdisplay">div<span id="spandisplay" style="display: block;">span(block)</span>입니다</div><br>
+    </body>
+    <hr>
+
+
 </html>
