0906 홈페이지 제작 수정중

--- a/study_0906/portfolio.html
+++ b/study_0906/portfolio.html
@@ -78,7 +78,7 @@
             width: 200px;
             height: 250px;
         }
-        #contack {
+        #contact {
             background-color: rgba(255, 255, 255, 0.377);
         }
 
@@ -92,7 +92,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#skill">Skill</a></li>
                 <li><a href="#project">Project</a></li>
-                <li><a href="#contack">Contact</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
 
@@ -123,7 +123,7 @@
             </div>
         </div>
 
-        <div id="skill">
+        <div id="contact">
             <h3>Contact</h3>
             <div>
             </div>
