--- a/study_0907/self_tictactoe.html
+++ b/study_0907/self_tictactoe.html
@@ -5,7 +5,14 @@
     <style>
         div {
             display: grid;
-
+            justify-content: center;
+            grid-template-columns: repeat(3, 300px);
+            gap: 10px;
+        }
+        #blank {
+            width: 300px;
+            height: 300px;
+            border: ;
         }
     </style>
     <script>
@@ -14,5 +21,11 @@
         }
     </script>
     </head>
+
+    <body>
+        <div>
+            <div id="blank"></div>
+        </div>
+    </body>
 
 </html>
