--- a/study_0907/self_tictactoe.html
+++ b/study_0907/self_tictactoe.html
@@ -12,7 +12,7 @@
         #blank {
             width: 300px;
             height: 300px;
-            border: ;
+            border: 1px;
         }
     </style>
     <script>
