--- a/study_0907/self_tictactoe.html
+++ b/study_0907/self_tictactoe.html
@@ -6,25 +6,32 @@
         div {
             display: grid;
             justify-content: center;
-            grid-template-columns: repeat(3, 300px);
+            grid-template-columns: repeat(3, 100px);
             gap: 10px;
         }
         #blank {
-            width: 300px;
-            height: 300px;
-            border: 1px;
+            width: 100px;
+            height: 100px;
+            background-color: bisque;
         }
     </style>
     <script>
-        function change() {
-            
-        }
+        var ttt = document.getElementsByClassName("blank");
+        
     </script>
     </head>
 
     <body>
         <div>
-            <div id="blank"></div>
+            <div class="blank"></div>
+            <div class="blank"></div>
+            <div class="blank"></div>
+            <div class="blank"></div>
+            <div class="blank"></div>
+            <div class="blank"></div>
+            <div class="blank"></div>
+            <div class="blank"></div>
+            <div class="blank"></div>
         </div>
     </body>
 
