--- a/study_0907/self_tictactoe.html
+++ b/study_0907/self_tictactoe.html
@@ -1,4 +1,3 @@
-<!-- 틱택토 게임 -->
 <!DOCTYPE html>
 <html>
     <head><title>Tic Tac Toe Game</title>
@@ -6,22 +5,38 @@
         div {
             display: grid;
             justify-content: center;
-            grid-template-columns: repeat(3, 100px);
+            grid-template-columns: repeat(3, 105px);
             gap: 10px;
         }
-        #blank {
+        .blank {
             width: 100px;
             height: 100px;
-            background-color: bisque;
+            border: 3px double;
         }
     </style>
     <script>
-        var ttt = document.getElementsByClassName("blank");
+        function mouseClick() {
+            var blanks = document.getElementsByClassName("blank");
+            
+            for (var i=0; i< blanks.length; i++) {
+                if(i%2 == 0) {
+                    blanks[i].addEventListener("click", function() {
+                        this.style.backgroundColor = "yellow";
+                        blank[i].textContent = "X";
+                    });
+                } else {
+                    blanks[i].addEventListener("click", function() {
+                        this.style.backgroundColor = "red";
+                        blank[i].childElement.textContent = "O";
+                    });
+                }
+            }
+        }
         
     </script>
     </head>
 
-    <body>
+    <body onload="mouseClick()">
         <div>
             <div class="blank"></div>
             <div class="blank"></div>
@@ -34,5 +49,4 @@
             <div class="blank"></div>
         </div>
     </body>
-
 </html>
