0908 tic tac toe 해결

--- a/study_0907/self_tictactoe.html
+++ b/study_0907/self_tictactoe.html
@@ -4,7 +4,7 @@
     <style>
         div {
             display: grid;
-            text-align: center;
+            justify-content: center;
             grid-template-columns: repeat(3, 105px);
             gap: 10px;
         }
