0908 틱택토 수정

--- a/study_0908/self_tictactoe.html
+++ b/study_0908/self_tictactoe.html
@@ -20,6 +20,7 @@
     </style>
     <script>
         var input = "X";
+        var blank = document.getElementsByClassName("blank");
 
         function mouseClick(blank) {
             if (blank.textContent === "X" || blank.textContent === "O") {
